--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "version": "1.0.0",
   "author": "huahaoworkspace@163.com <huahaoworkspace@163.com>",
   "license": "MIT",
-  "private": true,
+  "private": false,
+  "main":"dist/vue-loading.js",
+  "files":["dist"],
+  "repository": {
+    "type":"git",
+    "url":"https://github.com/Harhao/vue-Loading"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
