fixed the vue-loading

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-loading",
+  "name": "vill-loading",
   "description": "a loading base on svg",
   "version": "1.0.0",
   "author": "huahaoworkspace@163.com <huahaoworkspace@163.com>",
